--- a/src/css/dashboard/ticket_sold.css
+++ b/src/css/dashboard/ticket_sold.css
@@ -1,54 +1,69 @@
 .ticket-card {
-    position: relative;
-  }
-  
+  position: relative;
+}
+
+.ticket-icon {
+  width: 50px;
+  height: auto;
+  margin-right: 10px; /* Space between the image and text */
+}
+
+.ticket-amount {
+  font-size: 20px;
+  color: #091057;
+}
+
+.card-body h4 {
+  font-size: 16px;
+  font-weight: 600;
+  color: #091057;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.today-text {
+  font-size: 16px;
+  text-align: center;
+  position: absolute;
+  bottom: 10px;
+  width: 100%;
+}
+
+@media (max-width: 768px) {
   .ticket-icon {
-    width: 50px;
-    height: auto;
-    margin-right: 10px; /* Space between the image and text */
+    width: 35px;
   }
-  
+
   .ticket-amount {
-    font-size: 20px;
-    color: #091057;
+    font-size: 1rem;
   }
-  
-  .card-body h4 {
-    font-size: 16px;
-    font-weight: 600;
-    color: #091057;
-    margin-top: 10px;
-    text-align: center;
+
+  .today-text {
+    font-size: 12px;
   }
-  
-  @media (max-width: 768px) {
-    .ticket-icon {
-      width: 35px;
-    }
-  
-    .ticket-amount {
-      font-size: 1rem;
-    }
+}
+
+@media (max-width: 480px) {
+  .ticket-icon {
+    width: 30px;
   }
-  
-  @media (max-width: 480px) {
-    .ticket-icon {
-      width: 30px;
-    }
-  
-    .ticket-amount {
-      font-size: 0.9rem;
-    }
+
+  .ticket-amount {
+    font-size: 0.9rem;
   }
-  
-  @keyframes fadeInUp {
-    0% {
-      opacity: 0;
-      transform: translateY(20px);
-    }
-    100% {
-      opacity: 1;
-      transform: translateY(0);
-    }
+
+  .today-text {
+    font-size: 10px;
   }
-  
+}
+
+@keyframes fadeInUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
